# llvm-lite

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/include/common/: casting.h  common.h  graph.h  ilist.h  pair_hash.h
src/include/config/: config.h  reader.h
src/include/ir/: alignment.h  attr_grp.h  attributes.h  basicblock.h  constant.h  func.h  global.h  instruction.h  instructions.h  metadata.h  program.h  ty.h  value.h  value_info.h
src/include/passes/: constant_folding.h  dce.h  pass.h
src/include/syntax/: _attrs.inc  _insts.inc  _keywords.inc  _tys.inc  args_parser.h  lexer.h  parser.h  span.h  tokens.h
src/lib/ir/: formatted.cpp  value.cpp  value_info.cpp
src/lib/passes/: constant_folding.cpp  dce.cpp
src/lib/syntax/: lexer.cpp  parser.cpp  span.cpp
testcase/conv2/: args_conv2.txt  conv2_dynamic_65.s
testcase/softmax/: args_softmax.txt  softmax_v2_dynamic_float16_400001.s
testcase/trivial/: args_trivial.txt  trivial.s
